# irl-pokedex

./: .gitignore  all_pokemon.json  all_pokemon_safe.json  classes.json  classes_cleaned.json  cvat_labels.json  cvat_labels_full.json  dex_scraper.py  failed_pokemon.json  name_maps.json  plushie_scraper.py  pokedex.json  pokedex_forms.json  pokedex_settings.yaml  pokemon to japanese names.csv  requirements.txt  tcg_scraper.py  test.py
data/: find_skipped.py  flatten_labels.py  gen_png_bboxes.py  regionals.py
data/cvat/: CVAT_Bounding_Box_Similarity_Checker.ipynb  cvat_label_builder.py  cvat_labels.json
data/scrapers/: region_scraper.py
data/scrapers/MyFigureCollection/: README.txt  cvat_label_builder.py  labels OUTDATED.txt  plushie_scraper.py
data/scrapers/NoodulzPokemonDataset1000/: README.txt  sorter.py
data/scrapers/PokeMiners/: README.txt  extracter.py
data/scrapers/PokePlushProject/: README.txt  download_flickr_pokemon.py  flickr downloads.ipynb  flickr_downloads_urls.txt
data/scrapers/PokeSprite/: README.txt  extracter.py  pokemon_sprites.txt  sorter.py
data/scrapers/PokemonDB/: README.txt  dex_scraper.py
data/scrapers/PokemonTCG/: README.txt  downloader.py  final_tcg_list.json  onlyfive.json  onlyfour.json  onlyone.json  onlythree.json  onlytwo.json  tcg_scraper.py
data/scrapers/ProjectPokemon/: README.txt  combiner.py  downloader.py  pokemon_home_images_full.json  pokemon_images.json  pokemon_master.json  pokemondb_scraper.py  projectpokemon_scraper.py
data/scrapers/RotomPlushDex/: README.txt  cleaner.py  downloader.py  plushie_scraper.py  pokemon_plush_images.json  pokemon_plush_images_seq_candidates.json  redownloader.py  rescraper.py  rotom_plushdex_cleaned_seq_candidates.json  rotom_plushdex_plush_cleaned.json  (+2 more)
ml/: convert.py
pokedex/: Cargo.toml  Cross.toml  Dockerfile
pokedex/assets/resources/: all_pokemon_safe.json  classes.json  fix.py  name_maps.json  pokedex.json
pokedex/src/: enums.rs  grid.rs  io.rs  main.rs  ml.rs  pipeline.rs  screen.rs  util.rs
pokedex/src/elements/: filter.rs  grid.rs  gstreamer_recipe.rs  gstreamer_stream.rs  hex_button.rs  icon_button.rs  image_cache.rs  keyboard.rs  loading_screen.rs  message_box.rs  mod.rs  modal.rs  pokedex_spinner.rs  pokemon_details.rs  register_pokemon.rs  registered_icon.rs
pokedex/src/screen/: browse_pokedex.rs  home.rs  mod.rs  register.rs
pokedex/src/screen/browse_pokedex/: browse_pokedex.rs  filter.rs  filter_predicate.rs  image_cache.rs  keyboard.rs  mod.rs  scanlines.rs
pokedex/src/screen/filter/: filter.rs
pokedex/src/screen/home/: home.rs  loading_screen.rs  mod.rs
pokedex/src/screen/register/: mod.rs  pokedex_spinner.rs  pokemon_details.rs  register.rs  register_pokemon.rs
(+11 files in other folders)
