[package]
name = "pokedex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
config = "0.15.19"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
iced_gif = "0.14.0"
image = { version = "0.25.9", features = ["default-formats"] }
include_assets = "1.0.0"
ndarray = "0.17.2"
noise = "0.9.0"
rand = {version="0.10.0", features=["thread_rng"]}
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features=["sync"]}
url = "2.5.7"

[target.'cfg(target_arch = "aarch64")'.dependencies]
iced = { version = "0.14.0", default-features = false, features = ["advanced", "canvas", "tokio", "image", "tiny-skia", "wayland"] }
openssl = { version = "0.10.75", features = ["vendored"] }
ort = { git = "https://github.com/pykeio/ort.git", rev = "94417081c47f47f5a7d6a92ce94bb38fda10019f", default-features = false, features = [
    "load-dynamic",
    "ndarray",
    "tracing",
]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
iced = { version = "0.14.0", default-features = false, features = ["advanced", "canvas", "tokio", "image", "wgpu"] }
ort = { git = "https://github.com/pykeio/ort.git", rev = "94417081c47f47f5a7d6a92ce94bb38fda10019f", features = ["download-binaries"]}
